[package]
name = "rsimage"
version = "0.1.0"
edition = "2024"
license = "Unlicense"

[lib]
crate-type = ["cdylib"]

[dependencies]
turbojpeg = "1.4.0"
image = { version = "0.25.10", default-features = false, features = ["bmp", "dds", "png", "gif", "jpeg", "tiff", "webp", "rayon", "avif-native"] }
libc = "0.2.186"
